docker y logica para guardado de tecnicos
